@@ -19,6 +19,9 @@ CHANGES - Current Version:
 - Fixed another problem writing collections when the header of objects 
   part of a collection were split on multiple blocks (bug 1663)
 
+- Added missing NULL pointer checks in SetPenFromStyleString(), 
+  SetBrushFromStyleString() and SetSymbolFromStyleString() (bug 1670)
+
 
 Version 1.6.0 (2007-02-15)
 --------------------------
@@ -755,5 +758,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.172 2007-02-23 18:56:44 dmorissette Exp $
+$Id: HISTORY.TXT,v 1.173 2007-02-28 20:41:40 dmorissette Exp $
 ------------
